add levelup time, change some remove

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title id="title">html survivor</title>
+    <button id="levelup_end">go into game</button>>
 </head>
 
 
 <body>
-    <h1 id="head"> game </h1>
+    <h1 id="game_status"> game </h1>
     <h2 id="interval"></h2>
+    <h2 id = "countdown">countdown</h2>
     <h2 id="mouse_x"></h2>
     <h2 id="mouse_y"></h2>
 
