--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body>
     <h1 id="game_status"> game </h1>
     <h2 id="interval"></h2>
-    <h2 id = "countdown">countdown</h2>
+    <h2 id="countdown">countdown</h2>
     <h2 id="mouse_x"></h2>
     <h2 id="mouse_y"></h2>
 
-    <canvas id="html_canvas" width="1100" height="600" tabindex='1'>
+    <canvas id="html_canvas" width="1100" height="600" tabindex='1'></canvas>
+    <canvas id="chart_canvas" width="600" height="400" tabindex='2'>
 
-        <script type="module" src="./js/renderer.js"></script>
+    <script type="module" src="./js/renderer.js"></script>
 
 
 
@@ -35,5 +36,6 @@
 <img id="bullet1" src="assets/bullet1.png">
 <img id="bullet2" src="assets/bullet2.png">
 <img id="explosion" src="assets/explosion.png">
+
 
 </html>
